--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h2>Hey !</h2>
     <p>It's NgFySidebar</p>
     <h3>Links</h3>
-    <a href="https://github.com/Fyrok1/NgFySidebar">Github Page</a><br>
+    <a href="https://github.com/Fyrok1/ng-fy-sidebar">Github Page</a><br>
     <a href="https://www.npmjs.com/package/ng-fy-sidebar">Npm Page</a><br>
     <a href="mailto:tahsincesur1@gmail.com">For Feedback or Questions</a>
   </div>
