--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <ng-fy-sidebar [data]="sidebarData">
-  <div style="padding: 10px;">
-    <h2>Hey !</h2>
-    <p>It's NgFySidebar</p>
-    <h3>Links</h3>
-    <a href="https://github.com/Fyrok1/ng-fy-sidebar">Github Page</a><br>
-    <a href="https://www.npmjs.com/package/ng-fy-sidebar">Npm Page</a><br>
-    <a href="mailto:tahsincesur1@gmail.com">For Feedback or Questions</a>
+  <div style="padding:20px 10px">
+    <h2>ng-fy-ripple</h2>
+    <p>All element one directive</p>
+    <button ngFyRipple style="outline: none;height: 100px;width: 150px;">
+      On Button
+    </button>
+    <div ngFyRipple style="height: 100px;width: 150px;display: inline-flex;justify-content: center;align-items: center;margin-left: 20px;">
+      <p>Not Button</p>
+    </div>
+    <br><br>
+    <a href="mailto:tahsincesur1@gmail.com">For Feedback and Problems</a>
   </div>
 </ng-fy-sidebar>
